--- a/doc/preamble.tex
+++ b/doc/preamble.tex
@@ -30,6 +30,9 @@
 \usepackage[strings]{underscore}
 \usepackage{listings}
 \usepackage{bbm}
+\usepackage{multicol}
+\usepackage{parskip}
+\setlength{\columnseprule}{0.4pt}
 \rhead{}
 \lhead{}
 
@@ -44,7 +47,7 @@
 \DeclareMathOperator{\argmax}{arg\,max}
 
 % do not number subsection and below
-\setcounter{secnumdepth}{1}
+\setcounter{secnumdepth}{2}
 
 % custom format subsection
 \titleformat*{\subsection}{\large\bfseries}
