--- a/doc/report.tex
+++ b/doc/report.tex
@@ -64,7 +64,7 @@ Initially, we included punctation as distinct observations in our model, but our
 We used the supervised and unsupervised HMM code as the base for our HMM models in this project. The Numpy model helped with data manipulation. As mentioned earlier, the NLTK library was useful in tokenizing.\\
 \indent For the recurrent neural network, we used Keras with a Tensorflow backend to create a sequential model with long-term short-term memory (LSTM), a type of RNN, layers.
 \subsection{What decisions did you have to make when running the algorithm and what did you try? e.g number of states}
-\subsection{How did this affect the sonnets that were generated}
+\subsection{How did this affect the sonnets that were generated?}
 
 \section{Poetry Generation}
 \medskip
@@ -115,7 +115,7 @@ The RNN was much more finicky than the HMM was in that it was much more sensitiv
     i grant i never saw a goddess go, \\
     my mistress when she walks treads on the ground. \\
     and yet by heaven i think my love as lare \\
-} \\
+} 
 which is just a copy of Shakespeare's sonnet 130. One of the more successful generations we got is the following, generated with 1024x256 with 20 iterations: \\
 \texttt{
     That love in move that I am stained, \\
